force-app/main/default/objects/sugati__Trip_Planner_Settings__c/sugati__Trip_Planner_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trip Planner Settings</label>
</CustomObject>