force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Agency_Commission_Range_and_Step__c.field-meta.xml
<CustomField>
    <fullName>sugati__Agency_Commission_Range_and_Step__c</fullName>
    <description>Minimum agency commission percentage, maximum agency commission percentage, step interval - comma separated.
(For example: 0,40,.1)</description>
    <inlineHelpText>Minimum agency commission percentage, maximum agency commission percentage, step interval - comma separated.
(For example: 0,40,.1)</inlineHelpText>
    <label>Agency Commission Range and Step</label>
    <length>20</length>
    <type>Text</type>
</CustomField>