force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Allow_Managing_Change__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_Managing_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable users to see the confirmation and calculation run upon pax add/removal</inlineHelpText>
    <label>Allow Managing Change</label>
    <type>Checkbox</type>
</CustomField>