force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Available_Costing_Breakdowns__c.field-meta.xml
<CustomField>
    <fullName>sugati__Available_Costing_Breakdowns__c</fullName>
    <label>Available Costing Breakdowns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>