force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Bypass_Calculations__c.field-meta.xml
<CustomField>
    <fullName>sugati__Bypass_Calculations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completely bypass the built in calculations on the trip planner popup - this should be used in conjunction with a custom cost component.</description>
    <inlineHelpText>Completely bypass the built in calculations on the trip planner popup - this should be used in conjunction with a custom cost component.</inlineHelpText>
    <label>Bypass Calculations</label>
    <type>Checkbox</type>
</CustomField>