force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Calculate_Net_Cost_Excluding_VAT__c.field-meta.xml
<CustomField>
    <fullName>sugati__Calculate_Net_Cost_Excluding_VAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Net Cost Excluding VAT</label>
    <type>Checkbox</type>
</CustomField>