force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Commission_VAT__c.field-meta.xml
<CustomField>
    <fullName>sugati__Commission_VAT__c</fullName>
    <inlineHelpText>Used in the Trip planner to calculate the VAT on the Supplier Commission and the Agent Commission</inlineHelpText>
    <label>Commission VAT %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>