force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Default_Costing_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Costing_Breakdown__c</fullName>
    <defaultValue>&quot;Individual&quot;</defaultValue>
    <label>Default Costing Breakdown</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>