force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Hide_Price_Adjustment_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hide_Price_Adjustment_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Price Adjustment Button</label>
    <type>Checkbox</type>
</CustomField>