force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Markup_Range_and_Step__c.field-meta.xml
<CustomField>
    <fullName>sugati__Markup_Range_and_Step__c</fullName>
    <description>Minimum markup percentage, maximum markup percentage, step interval - comma separated.
(For example: 0,40,.1)</description>
    <inlineHelpText>Minimum markup percentage, maximum markup percentage, step interval - comma separated.
(For example: 0,40,.1)</inlineHelpText>
    <label>Markup Range and Step</label>
    <length>20</length>
    <type>Text</type>
</CustomField>