force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Price_Adjustment_Supplier_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__Price_Adjustment_Supplier_Id__c</fullName>
    <description>The Id of the supplier that will be used for price adjustment lines in trip planner.</description>
    <inlineHelpText>The Id of the supplier that will be used for price adjustment lines in trip planner.</inlineHelpText>
    <label>Price Adjustment Supplier Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>