force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Row_3_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Row_3_Record_Type__c</fullName>
    <description>The record type for row 3 on empty opportunities.</description>
    <inlineHelpText>The record type for row 3 on empty opportunities.</inlineHelpText>
    <label>Row 3 Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>