force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Show_Unselected_Option_Pricing__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Unselected_Option_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, pricing for unselected options will be shown in the main table.</description>
    <label>Show Unselected Option Pricing</label>
    <type>Checkbox</type>
</CustomField>