force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Supplier_Cancellation_Charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier_Cancellation_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Cancellation Charges</label>
    <type>Checkbox</type>
</CustomField>