force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Trip_Planner_New_Record_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Trip_Planner_New_Record_Fieldset_Name__c</fullName>
    <label>Trip Planner New Record Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>