force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Trip_Planner_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Trip_Planner_Transition_Date__c</fullName>
    <label>Trip Planner Transition Date</label>
    <type>Date</type>
</CustomField>