force-app/main/default/objects/sugati__Trip_Planner_Settings__c/fields/sugati__Use_Enhanced_Rates__c.field-meta.xml
<CustomField>
    <fullName>sugati__Use_Enhanced_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Enhanced Rates</label>
    <type>Checkbox</type>
</CustomField>